workaround for ngbmodal bug with the z-index https://github.com/ng-bootstrap/ng-bootstrap/issues/2686

--- a/Rio.Web/src/styles.scss
+++ b/Rio.Web/src/styles.scss
@@ -189,3 +189,7 @@ input:checked + .slider .off {
     display: none;
   }
 }
+
+ngb-modal-backdrop {
+  z-index: 1050 !important;
+}
